[metadata]
name = polites
version = v1.0
summary = Cassandra Agent Configurator
description-file = Readme.md
author = Sean McCully
author-email = sean_mccully@yahoo.com
home-page = http://www.seanmccully.net
classifier =
    Development Status :: 4 - Beta
    Environment :: No Input/Output (Daemon)
    Framework :: Twisted
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Intended Audience :: Cassandra
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6
    Topic :: Database
    Topic :: Internet :: WWW/HTTP
    Topic :: System :: Monitoring
    Topic :: Utilities


[files]
packages = polites
data_files =
    etc/polites =
        settings/config.py
        settings/restore-cassandra-1.1.yaml
        settings/restore-cassandra-1.2.yaml
        settings/restore-cassandra.yaml
    /var/www/polites =
        build/html/example.html
	build/html/genindex.html
	build/html/polites.html
	build/html/polites.settings.html
	build/html/http.html
	build/html/contact.html
	build/html/config.html
	build/html/index.html
	build/html/py-modindex.html
	build/html/install.html
	build/html/objects.inv
	build/html/py-modindex.html
	build/html/search.html
	build/html/searchindex.js
	build/html/uses.html
    /var/www/polites/_sources =
	build/html/_sources/example.txt
	build/html/_sources/polites.settings.txt
	build/html/_sources/polites.txt
 	build/html/_sources/http.txt
 	build/html/_sources/index.txt
 	build/html/_sources/install.txt
 	build/html/_sources/uses.txt
    /var/www/polites/_static =
	build/html/_static/ajax-loader.gif
	build/html/_static/basic.css
	build/html/_static/comment-bright.png
	build/html/_static/comment-close.png
	build/html/_static/comment.png
	build/html/_static/default.css
	build/html/_static/doctools.js
	build/html/_static/down-pressed.png
	build/html/_static/down.png
	build/html/_static/file.png
	build/html/_static/jquery.js
	build/html/_static/minus.png
	build/html/_static/plus.png
	build/html/_static/pygments.css
	build/html/_static/searchtools.js
	build/html/_static/sidebar.js
	build/html/_static/underscore.js
	build/html/_static/up-pressed.png
	build/html/_static/up.png
	build/html/_static/websupport.js
        
[entry_points]
console_scripts =
    polites = polites.agent:main


[build_sphinx]
all_files = 1
build-dir = build
source-dir = source

[egg_info]
tag_build = .dev
